# skill_forge

./: .dockerignore  .env_variables  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.postgres  Dockerfile.skill_forge  README  README.md  achievements.sql  admin_submit_quest.py  app.py  config.py  docker-compose.yaml  e this instead of the above line for db migrations  edit_quest_form.py  email_functionality.py  function_template.txt  init.sql  insert_new_quest.py  levels.json  login_forms.py  main_page_info  make_json.py  manage.py  mongo-init.js  new_structure.txt  package-lock.json  package.json  packages_requirements  quest_condition.txt  requirements.txt  reset_password.py  run.py  setup-postgres.sh  setup.cfg  tailwind.config.js  test_cases.py  (+9 more)
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  new-quest-submit.md
.obsidian/: hotkeys.json  workspace.json
app/: __init__.py  forms.py  mailtrap.py  main_page_info  main_page_title  models.py  quests_routes.py  routes.py  sockets.py  user_permission.py  user_routes.py  user_submit_quest_routes.py  user_submited_solutions.py
app/code_runners/: run_csharp.py  run_java.py  run_javascript.py  run_python.py
app/database/: db_init.py  mongodb_init.py  mongodb_transactions.py
auth_service/: .gitignore  Dockerfile  README.md  app.py  config.py  extensions.py  models.py  requirements.txt  routes.py  services.py
js-backend-server/: .dockerignore  Dockerfile  server.js  test.py
old-build/: Dockerfile.skill_forge  docker-compose.yaml
skill_forge/: pyvenv.cfg
skill_forge_frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
static/: admin_panel.css  admin_panel_add_quest.css  buttons.css  curr_task_template.css  login_form.css  main_page.css  navbar.css  script.js  scripts.js  styles.css  styles_tasks.css  table.js  task_page.css  tasks_template.css  user_profile.css
templates/: admin_panel.html  c_sharp_tasks.html  curr_task_template.html  edit_quest.html  edit_reported_quest.html  edit_submited_quest.html  edit_user.html  email-reset-password-template.html  email-welcome-template.html  error_user_exists.html  footer.html  forgot_password.html  index.html  main.html  navbar.html  python_tasks.html  register.html  reset_password.html  table_template.html  tasks_template.html  user_profile.html  user_profile_view.html  user_submit_quest.html  view_solution.html
test_runners/: run_csharp.py  run_java.py  run_javascript.py  run_python.py
underworld_service/: .gitignore  README.md  app.py  boss_routes.py  config.py  genai_client.py  models.py  requirements.txt  services.py
users_service/: app.py  config.py  levels.json  routes.py  user_progress_routes.py
(+170 files in other folders)
