[metadata]
name = Skill-Forge
version = 1.3.13
release_date = 28.07.2024
description = Skill Forge is a open-source platform for learning and practicing programming languages.
author = Aleksandar Karastoyanov
author_email = karastoqnov.alexandar@gmail.com
url = https://github.com/karastoyanov/skill_forge
license = GNU GPL v3.0
classifiers =
    Programming Language :: Python3 :: JavaScript :: HTML5 :: CSS3 :: Java:: C-sharp
    License :: OSI Approved :: GNU GPL
    Operating System :: Linux :: Debian :: Ubuntu
    Database :: PostgreSQL :: MongoDB
    Backend Framework :: Flask


[options]
packages = find:
include_package_data = true
python_requires = >=3.6
install_requires = 
    alembic==1.13.1
    bcrypt==4.1.2
    bidict==0.23.1
    blinker==1.7.0
    certifi==2024.7.4
    charset-normalizer==3.3.2
    click==8.1.7
    dnspython==2.5.0
    email-validator==2.1.0.post1
    eventlet==0.36.1
    Flask==3.0.1
    Flask-Bcrypt==1.0.1
    Flask-Cors==4.0.1
    Flask-Login==0.6.3
    Flask-Mail==0.9.1
    Flask-Migrate==4.0.7
    Flask-SocketIO==5.3.6
    Flask-SQLAlchemy==3.1.1
    Flask-WTF==1.2.1
    greenlet==3.0.3
    h11==0.14.0
    idna==3.6
    itsdangerous==2.1.2
    Jinja2==3.1.4
    mailtrap==2.0.1
    Mako==1.3.2
    MarkupSafe==2.1.5
    psycopg2-binary==2.9.9
    python-dotenv==1.0.1
    python-engineio==4.9.0
    python-socketio==5.11.2
    pytz==2024.1
    requests==2.32.2
    simple-websocket==1.0.0
    SQLAlchemy==2.0.25
    typing_extensions==4.9.0
    urllib3==2.2.2
    Werkzeug==3.0.3
    wsproto==1.2.0
    WTForms==3.1.2
