[metadata]
name = Skill-Forge
version = 1.5.0
release_date = 03.11.2024
description = Skill Forge is a open-source platform for learning and practicing programming languages.
maintainer = Aleksandar Karastoyanov
maintainer_email = karastoqnov.alexandar@gmail.com
url = https://github.com/Skill-Forge-Project/skill_forge
license = GNU GPL v3.0
classifiers =
    Programming Language :: Python3 :: JavaScript :: HTML5 :: CSS3 :: Java:: C-sharp
    License :: OSI Approved :: GNU GPL
    Operating System :: Linux :: Debian :: Ubuntu
    Database :: PostgreSQL :: MongoDB
    Backend Framework :: Flask
    Frontend Framework :: Bootstrap :: TailwindCSS
keywords = programming, learning, open-source, Skill Forge, coding challenges, Flask
project_urls =
    Source = https://github.com/Skill-Forge-Project/skill_forge
    Project Traker = https://github.com/orgs/Skill-Forge-Project/projects/3
    Issue Tracker = https://github.com/Skill-Forge-Project/skill_forge/issues
long_description = file: README.md
long_description_content_type = text/markdown
platforms = Unix, Linux

